--- a/css/style.css
+++ b/css/style.css
@@ -1,474 +1,34 @@
-*{
-	box-sizing: border-box;
+body{
+background-color: #ebebe0;
 }
-#wrapper{
-margin:0 auto;
-width: 1040px;
-height: auto;
+.navbar{
+background-color: #bfd741 !important;
+color: white !important;
+font-size: 18px !important;
+margin-left: 100px;
+padding-left: 20px;
+padding-top: 10px;
+}
+nav img{
+position: fixed;
+width: 100px;
+height: 100px;
+left:10px !important;
+top:0px;
+margin-left: 0px !important;
+border-radius: 10%;
 Box-shadow: 30px 0px 40px rgba(0,0,0,0.4), -30px 0px 40px rgba(0,0,0,0.4);
 }
-/* Top floating bar - start */
-.topbar{
-	background-color: #DFF0D8 !important;
+.namesize{
+  font-size: 24px;
 }
-.topbaremail{
-	width: 260px;
-	margin-left: -69px;
-	font-size: 23px;
+li{
+  padding-left: 18px;
+  padding-right: 18px;
 }
-.topbarlabel{
-	color: #106510 !important;
-	margin-left: 173px;
-	font-size: 25px;
+li:hover{
+background-color: white;
 }
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.topbarbutton{
-	margin-left:8px;
-	width: 250px;
-	margin-top: 9px;
-	background-color: rgb(255,255,255,0.9);
-	color: rgb(16,101,16);
-	font-weight: 600;
-	font-size: 20px;
-	border-radius: 40px;
-	Box-shadow: 20px 0px 20px rgba(255,255,255,0.4), -10px 0px 20px rgba(255,255,255,0.4);
-}
-.topbarbutton:hover{
-		background-color: rgb(16,101,16,0.9);
-		color: white;
-}
-/* Top floating bar - ends */
-/* nav bar code -starts */
-nav{
-background-color: #106510;
-position: absolute;
-font-family: 'Oswald', sans-serif;
-font-size: 26px;
-width: 1040px;
-top:210px;
-left:auto;
-}
-nav::after{
-	content: '';
-	display: block;
-	clear: both;
-}
-nav ul{
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-nav ul li:hover{
-	background-color: #CCE5C3;
-}
-nav ul li a:hover{
-	color: black;
-	text-decoration: none;
-}
-nav ul li:hover > ul{
-		display: block;
-	}
-nav ul li a{
-	text-decoration: none;
-	color: white;
-	display: inline-block;
-	position: relative;
-}
-nav ul ul {
-	position: absolute;
-	background-color: rgb(89, 166, 166);
-	display: none;
-}
-nav ul ul li{
-	padding: 8px 10px 8px 10px;
-	position: relative;
-}
-nav > ul
-{
-	padding-left: 50px;
-	margin-left: 30px;
-}
-nav > ul > li{
-	float: left;
-}
-nav > ul > li > a{
-	padding: 12px 22px 17px 22px;
-}
-/* nav bar code ends */
-h1{
-	color: #106510;
-	padding: 10px;
-	text-align: center;
-  background: linear-gradient(#ffffff 0%, #ffffff 49%, #eee 50%, #000000 51%, #ffffff 52%, #ffffff 100%);
-}
-h2{
-	color: rgb(16,101,16);
-	font-size: 22px;
-	margin-top: 30px;
-	text-align: center;
-}
-h3{
-	color: rgb(16,101,16);
-	margin-left: 30px;
-}
-span{
-	background: #fff;
-  padding: 0 20px;
+.call-heading{
   position: relative;
-  z-index: 5;
-}
-section{
-	width:100%;
-	padding-left: 10px;
-	float:left;
-	padding-right: 30px;
-	font-size: 20px;
-	text-align: center;
-	font-family: 'Roboto', sans-serif;
-}
-footer{
-	clear: both;
-	text-align: center;
-	padding-top: 24px;
-	height: 156px;
-	width: 1040px;
-	background-color: rgb(16,101,16);
-}
-footer p{
-	color: white;
-	font-size: 24px;
-}
-.leftpane{
-	float: left;
-}
-.rightpane{
-	float: right;
-}
-.testimg{
-	width: 200px;
-	height: 200px;
-	border-radius: 100px;
-}
-/* Contact Page Css - starts*/
-fieldset{
-	font-family: 'Roboto', sans-serif;
-	font-size: 22px;
-	background-color:rgb(16,101,16);
-	margin: 0 auto;
-	margin-bottom: 20px;
-	border-radius: 10px;
-	width:670px;
-	padding-top: 30px;
-	padding-bottom: 20px;
-	Box-shadow: 30px 0px 40px rgba(0,0,0,0.2), -30px 0px 40px rgba(0,0,0,0.2);
-}
-legend{
-	background-color: rgb(255,255,255,0.9);
-  color: rgb(16,101,16);
-  padding: 15px 10px;
-	border-radius: 70px;
-	font-size: 18px;
-	width: 600px;
-	word-spacing: 3px;
-	font-weight: bold;
-}
-textarea{
-	vertical-align: top;
-  position: relative;
-	left:102px;
-  border-radius: 3px;
-	color:rgb(16,101,16);
-	width: 352px;
-}
-label{
-	font-family: 'Roboto',sans-serif;
-	margin-left: 30px;
-	color: white;
-	font-weight: bold;
-}
-#count{
-	font-family: 'Roboto',sans-serif;
-	margin-left: 237px;
-	color: white;
-	font-weight: bold;
-}
-em{
-	color: red;
-}
-#error{
-	font-family: 'Roboto',sans-serif;
-	margin-left: 49px;
-	margin-top: -20px;
-	color: red;
-	font-size: 18px;
-}
-#error1{
-	font-family: 'Roboto',sans-serif;
-	margin-left: 49px;
-	margin-top: -20px;
-	color: red;
-	font-size: 18px;
-}
-#error2{
-	font-family: 'Roboto',sans-serif;
-	margin-left: 5px;
-	margin-top: -20px;
-	color: red;
-	font-size: 18px;
-}
-#error3{
-	font-family: 'Roboto',sans-serif;
-	margin-left: 49px;
-	margin-top: -20px;
-	color: red;
-	font-size: 18px;
-}
-.mbutton{
-		margin-left:181px;
-		width: 250px;
-		margin-top: 9px;
-		background-color: rgb(255,255,255,0.9);
-		color: rgb(16,101,16);
-		font-weight: 600;
-		border-radius: 40px;
-		Box-shadow: 20px 0px 20px rgba(255,255,255,0.4), -10px 0px 20px rgba(255,255,255,0.4);
-}
-.mbutton:hover{
-	background-color: rgb(16,101,16,0.9);
-	color: white;
-}
-input{
-	position: relative;
-	left:88px;
-	height: 46px;
-	width: 352px;
-	color:rgb(16,101,16);
-}
-#email{
-		left:53px;
-}
-#subject{
-		left:53px;
-}
-address{
-	text-align: center;
-	font-size: 20px;
-}
-.addressbg{
-	background-color: #DFF0D8;
-}
-select{
-	position: relative;
-	left: 88px;
-	height: 46px;
-	width: 352px;
-	color:rgb(16,101,16);
-	font-weight: bold;
-}
-.btn{
-position: absolute;
-top:30px;
-left: 870px;
-font-size: 30px;
-animation-name: btnanimation;
-animation-fill-mode: forwards;
-animation-duration: 2s;
-animation-iteration-count: 1;
-}
-.btn:hover{
-	color: white;
-}
-@keyframes btnanimation {
-	0% { color: #ff7034; font-size: 20px; top:30px;}
-	25% { color: #e6652f;}
-	50% { color: #99431f; opacity: 0%}
-	75% { color: #662d15;}
-	100% {font-size: 30px; transform: rotate(360deg);}
-}
-/* Contact Page Css - ends*/
-/* Landscaping Tips and About us Page- Start */
-.tips{
-font-size: 24px;
-padding: 30px;
-
-}
-.atips{
-	font-size: 24px;
-	padding: 30px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-}
-.htips{
-	font-size: 28px;
-}
-.mtips{
-	color: white;
-	font-size: 2.0em;
-}
-.mtip{
-	background-color: rgb(16,101,16);
-	margin-top: 38px;
-	margin-left: 32px;
-	color: white;
-	width: 100px;
-	height: 100px;
-	border-radius: 100px;
-}
-#more {  /* Read more or less button code */
-  display: none;
-}
-#showMore {
-  cursor: pointer;
-  border: 1px solid rgb(16,101,16);
-  background-color: transparent;
-  height: 50px;
-  width: 200px;
-  color: rgb(16,101,16);
-  font-size: 1.5em;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.6);
-  margin-top: 10px;
-  margin-bottom: 57px;
-	margin-left: 438px;
-	text-align: center;
-}
-#showMore:hover {
-  transform: scale(1.1);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-/* Landscaping Tips and about us Page - End */
-/* Past Projects page code - start*/
-.message{
-margin-top: -41px;
-}
-
-.card{
-  text-align: center;
-  background-color: white;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  width: 100%;
-  border-radius: 20px;
-  Box-shadow: 30px 0px 40px rgba(0,0,0,0.2), -30px 0px 40px rgba(0,0,0,0.2);
-
-}
-.card-body{
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 3px;
-}
-/* Past Projects page code - end*/
-
-/* Media query for different screen sizes */
-
-@media only screen and (max-width: 762px) {
-
-	span{
-		display: none;
-	}
-	#wrapper{
-		margin:0 auto;
-		width: 650px;
-		height: auto;
-		Box-shadow: 30px 0px 40px rgba(0,0,0,0.4), -30px 0px 40px rgba(0,0,0,0.4);
-	}
-	footer{
-		clear: both;
-		text-align: center;
-		font-size: 20px;
-		padding-top: 24px;
-		height: 156px;
-		width: 650px;
-		background-color: rgb(16,101,16);
-	}
-	nav{
-	background-color: #106510;
-	position: absolute;
-	font-family: 'Oswald', sans-serif;
-	font-size: 26px;
-	width: 650px;
-	top:269px;
-	left:-10px;
-	}
-	fieldset {
-    font-family: 'Roboto', sans-serif;
-    font-size: 19px;
-    background-color: rgb(16,101,16);
-    margin: 0 auto;
-		margin-left: 15px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    width: 650px;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    Box-shadow: 30px 0px 40px rgb(0 0 0 / 20%), -30px 0px 40px rgb(0 0 0 / 20%);
-   }
-	 input{
-     position: relative;
-     left: 88px;
-     height: 46px;
-     width: 252px;
-     color: rgb(16,101,16);
- }
- select{
-	 width: 252px;
- }
- textarea{
-	 width: 252px;
- }
- .mbutton{
-	 width: 170px;
- }
-	.topbar{
-		background-color: #DFF0D8 !important;
-		width: 650px;
-	}
-	.topbaremail{
-		width: 220px;
-		margin-left: -69px;
-		font-size: 19px;
-	}
-	.topbarlabel{
-		color: #106510 !important;
-		margin-left: 45px;
-		font-size: 21px;
-	}
-	.topbarbutton{
-		margin-left:68px;
-		width: 200px;
-		margin-top: 9px;
-		background-color: rgb(255,255,255,0.9);
-		color: rgb(16,101,16);
-		font-weight: 600;
-		font-size: 20px;
-		border-radius: 40px;
-		Box-shadow: 20px 0px 20px rgba(255,255,255,0.4), -10px 0px 20px rgba(255,255,255,0.4);
-	}
-	.card{
-	  text-align: center;
-	  background-color: white;
-	  margin: 0 auto;
-	  margin-bottom: 30px;
-		width: 15rem;
-	  Box-shadow: 30px 0px 40px rgba(0,0,0,0.2), -30px 0px 40px rgba(0,0,0,0.2);
-
-	}
-	.card-body{
-	  padding-left: 30px;
-	  padding-right: 30px;
-	  padding-bottom: 3px;
-	}
-	address{
-		text-align: left;
-		font-size: 17px;
-	}
-	.fit{
-		text-align: left;
-	}
-	.floatimg{
-		width: 650px;
-	}
 }
