--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,75 @@
-body{
-background-color: #ebebe0;
+body {
+    background-color: #ebebe0;
 }
-.navbar{
-background-color: #bfd741 !important;
-color: white !important;
-font-size: 18px !important;
-margin-left: 100px;
-padding-left: 20px;
-padding-top: 10px;
+
+.navbar {
+    background-color: #bfd741 !important;
+    color: white !important;
+    font-size: 18px !important;
+    margin-left: 100px;
+    padding-left: 20px;
+    padding-top: 10px;
 }
-nav img{
-position: fixed;
-width: 100px;
-height: 100px;
-left:10px !important;
-top:0px;
-margin-left: 0px !important;
-border-radius: 10%;
-Box-shadow: 30px 0px 40px rgba(0,0,0,0.4), -30px 0px 40px rgba(0,0,0,0.4);
+
+nav img {
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    left: 10px !important;
+    top: 0px;
+    margin-left: 0px !important;
+    border-radius: 10%;
+    Box-shadow: 30px 0px 40px rgba(207, 211, 198, 0.3), -30px 0px 40px rgba(0, 0, 0, 0.4);
 }
-.namesize{
-  font-size: 24px;
+
+.namesize {
+    font-size: 24px;
 }
-li{
-  padding-left: 18px;
-  padding-right: 18px;
+
+li {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    transition: background-color 1s;
 }
-li:hover{
-background-color: white;
+
+li:hover {
+    background-color: white;
+    color: #bfd741 !important;
 }
-.call-heading{
-  position: relative;
+
+h2 {
+    text-align: center;
+    padding: 20px;
+}
+
+footer {
+    color: #bfd741 !important;
+    background-color: black;
+    padding: 20px;
+    margin-top: 70px;
+    text-align: center;
+}
+
+.call-heading {
+    position: absolute;
+    top: 200px;
+    left: 60px;
+    color: aliceblue;
+}
+
+.call-button {
+    color: white;
+    border-color: aliceblue;
+    transition: background-color 2s;
+}
+
+.call-button:hover {
+    color: black;
+    background-color: #bfd741;
+}
+
+.search-button:hover {
+    color: black;
+    background-color: #bfd741;
 }
